--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yuxuan Li"
 title_separator          : "-"
 name                     : &name "Yuxuan Li"
-description              : &description "Undergraduate student, Tsinghua University, Department of Computer Science and Technology"
+description              : &description "Understand humans and technology, and let them augment each other."
 url                      : https://Yassellee.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Yassellee/Yassellee.github.io"
