--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yuxuan Li"
   avatar           : "profile.png"
-  bio              : "Undergraduate student, Tsinghua University, Department of Computer Science and Technology"
+  bio              : "Understand humans and technology, and let them augment each other."
   location         : "Beijing, China"
   employer         :
   email            :
